more course 5 notes

--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -36,13 +36,13 @@ keywords:
 
 we start with an AR(p) model as we define in the previous lesson:
 $$
-y_t = \phi_1 y_{t-1} + \ldots + \phi_p y_{t-p} + \varepsilon_t \qquad \varepsilon_t \stackrel{iid}{\sim} \mathcal{N}(0, v)
+y_t = \phi_1 y_{t-1} + \ldots + \phi_p y_{t-p} + \varepsilon_t \qquad \varepsilon_t \stackrel{iid}{\sim} \mathcal{N}(0, \nu)
 $$ {#eq-arp-inf-model}
 
 but now we wish to infer:
 
 - $\phi_i$ the *AR(p)* coefficients and 
-- $v$ the innovation variance.
+- $\nu$ the innovation variance.
 
 ### Conditional likelihood
 
@@ -58,7 +58,7 @@ The conditional distribution of $y_t$ given the previous $p$ values and paramete
 
 the density for the first $p$ observations is given by:
 $$
-p(y_{(p+1):T}\mid y_{1:p}, \phi_1, \ldots, \phi_p, v) = \prod_{t=p+1}^{T} p(y_t | y_{t-1}, \ldots, y_{t-p}, \phi_1, \ldots, \phi_p, v)
+\mathbb{P}r(y_{(p+1):T}\mid y_{1:p}, \phi_1, \ldots, \phi_p, v) = \prod_{t=p+1}^{T} \mathbb{P}r(y_t \mid y_{t-1}, \ldots, y_{t-p}, \phi_1, \ldots, \phi_p, v)
 $$ {#eq-arp-inf-full-cond-likelihood}
 
 This product of conditionals yields the full conditional likelihood. 
