--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,12 @@
-# Preface {.unnumbered}
+---
+title: "Introduction to Bayesian Statistics"
+---
 
-These are my notes on Bayesian Statistics. They are based on online courses I took after I worked as a Data Scientist for a number of years. Over this time I have often felt that if i was better at statistics I could overcome limitations in the data with mathematics, build even better models, and perhaps most importantly make better inferences using model I have already developed.
+These are my notes on Bayesian Statistics. They are based on online courses I took after I worked as a Data Scientist for a number of years. Over this time I have often felt that if I was better at statistics I could overcome limitations in the data with mathematics, build even better models, and perhaps most importantly make better inferences using models I have already developed.
 
-I tried to review the main result in statistic and probability theory, and I started to get better results and so I decided to take some classes. I often felt that the material was introductory and simplistic. Real world problems are monsters and the examples are usually trivial in comparison. The issues raised in class are rarely the troubles I saw at work. But I do believe deep down that the two are somehow related. And indeed as I covered more material certain aspects began to connect.
+I tried to review the main results in statistics and probability theory, and I started to get better results and so I decided to take some classes. I often felt that the material was introductory and simplistic. Real world problems are monsters and the examples are usually trivial in comparison. The issues raised in class are rarely the troubles I saw at work. But I do believe deep down that the two are somehow related. And indeed as I covered more material certain aspects began to connect.
 
-I noticed that like in real classes the teachers made mistakes, their motivation was not always clear and that they skipped steps or reffered to certain results. On the other hand each teacher offered different insights into this complicated area of data analysis.
+I noticed that like in real classes the teachers made mistakes, their motivation was not always clear and that they skipped steps or referred to certain results. On the other hand each teacher offered different insights into this complicated area of data analysis.
 
 I therefore have a number main areas of Focus:
 
@@ -16,7 +18,7 @@ I therefore have a number main areas of Focus:
 6.  Can I annotate the main equations to break them down.
 7.  Can I keep track of the most useful Mathematical results in Probability and Statistics?
     1.  I tried to keep these handy as appendices to keep the main material less cluttered. However as time goes by these keep expanding.
-8.  Can I learn to communicate my intuitions of these concepts to laymen and to colleages
+8.  Can I learn to communicate my intuitions of these concepts to laymen and to colleagues
     1.  Some courses have *discussion prompts*, but I tried to make the most of these, and included them in these notes.
     2.  I realized that while I often get excited about a new paper or technique my colleges are smart and talented people and quickly ask questions that are difficult to answer. These question often indicate gaps of knowledge which can dampen the enthusiasm for implementing these new ideas.
     3.  I found that good communicators can overcome these issues more readily and connect what they already know.
