--- a/C5-L01.qmd
+++ b/C5-L01.qmd
@@ -967,18 +967,35 @@ We briefly discuss two methods that are commonly used in practice for detrending
 #### Differencing
 
 Differencing is used to remove trends in time series data. The first difference of a time series is
-defined in terms of the difference operator that we denoted as D, that produces the transformation
-Dyt = yt − yt−1. Higher order differences are obtained by successively applying the operator D.
+defined in terms of the difference operator that we denoted as D, that produces the transformation 
 
-For example
+$$
+y_t = y_t − y_{t−1}
+$$
+
+Higher order differences are obtained by successively applying the operator D. For example
 
 $$
 D^2y_t = D(Dy_t) = D(y_t − y_{t−1}) = y_t − 2y_{t−1} + y_{t−2}
 $$ {#eq-capstone-differencing}
 
+Differencing can also be written in terms of the so called backshift operator $B$, with 
 
+$$
+By_t = y_{t−1} 
+$$
 
-Differencing can also be written in terms of the so called backshift operator B, with Byt = yt−1 so that $Dy_t = (1 − B)y_t \text{ and } D^dy_t = (1 − B)^dy_t$.
+so that 
+
+$$
+Dy_t = (1 − B)y_t
+$$
+
+and 
+
+$$
+D^dy_t = (1 − B)^dy_t.
+$$
 
 #### Moving Averages
 
