fix more math issues

--- a/C5-L01.qmd
+++ b/C5-L01.qmd
@@ -533,7 +533,7 @@ $$
 y_t = \phi_1 y_{t-1} + \phi_2 y_{t-2} + \cdots + \phi_p y_{t-p} + \varepsilon_t, \qquad \varepsilon_t\sim \mathcal{N}(0,\nu)
 $$
 
-where ($\varepsilon_t$) follows a normal distribution with mean zero and variance ($\nu$).
+where $\varepsilon_t$ follows a normal distribution with mean zero and variance ($\nu$).
 
 
 - First Step Ahead Prediction, $t>T$ :
@@ -554,7 +554,11 @@ where ($\phi_j^s$) and ($\nu^{(s)}$) are the posterior samples of the parameters
 ## AR model prediction example 📖 ℛ {#sec-capstone-ar-prediction-example}
 
 
-We now give an example for coding the prediction algorithm in R. Consider the simulated data in the previous class, an *AR(2)* model with 200 observations obtained from $y_t=0.5y_{t−1}+0.4y_{t−2}+\varepsilon_t,\varepsilon_t\sim \mathcal{N}(0,1)$. 
+We now give an example for coding the prediction algorithm in R. Consider the simulated data in the previous class, an *AR(2)* model with 200 observations obtained from 
+
+$$
+y_t=0.5y_{t−1}+0.4y_{t−2}+\varepsilon_t,\varepsilon_t\sim \mathcal{N}(0,1)
+$$  
 
 Before doing the prediction, we have to obtain posterior samples of model parameters 
 $\phi$ and $\nu$, which has been taught in the previous class. Here we just copy the code from previous to obtain 5000 posterior samples of $\phi$ and $\nu$
@@ -720,6 +724,7 @@ $$ {#eq-capstone-arp-linear-parm}
 Where $\operatorname{B}$ is the backshift operator, with $\operatorname{B}\varepsilon_{t} = \varepsilon_{t−1}$, $\psi_0 = 1$ and $\sum_{j=0}^{\infty} |\psi_j | < \infty$.
 
 $y_t$ is causal only when **the autoregressive characteristic polynomial**, defined as
+
 $$
 \Phi(u) = 1 - \sum_{j=1}^{p} \phi_j u^j
 $$ {#eq-capstone-arp-characteristic-polynomial}
@@ -774,16 +779,16 @@ In particular, $\frac{1}{\theta} > 1$ is the identifiability condition for a *MA
 In this case it is possible to write the *MA* process as an infinite order *AR* process.
 
 ::: {.callout-warning}
-## Order $\neq$ Memory of AR(p) or MA(q) processes
+## Overthinking: Order $\neq$ Memory of AR(p) or MA(q) processes
 
 Throughout this unit and also before we are told about a finite order $AR(p) \equiv MA(\infty)$  and $MA(q) \equiv AR(\infty)$. 
 If like me you think this is a strange claim then perhaps you don't understand the AR(1) and the MA(1) processes as well as you think.
 
-The main issue here is understanding the relation of the parameters AR(p) and MA(q) and the memory of the process. If at some point you equate p or q in these processes to their memory you are due to a rude awakening. P and Q are just the number of parameters in the AR or MA process, they are the dimensions of matrices that represent the process.
+The main issue here is understanding the relation of the parameters *AR(p)* and *MA(q)* and the memory of the process. If at some point you equate p or q in these processes to their memory you are due to a rude awakening. P and Q are just the number of parameters in the *AR* or *MA* process, they are the dimensions of matrices that represent the process.
 
-However, the actual memory of the process is determined by the behavior of the coefficients as the time goes to infinity. We can show how AR(1) and MA(1) can easily remember infinite number of past values. 
+However, the actual memory of the process is determined by the behavior of the coefficients as the time goes to infinity. We can show how *AR(1)* and *MA(1)* can easily remember infinite number of past values. 
 
-When we wish to represent such an AR(1) or MA(1) using their opposite we will quickly find counterexamples that require infinite number of parameters to represent the same process. In fact I would venture to say that only trivial or specially constructed AR and MA processes (e.g., white noise) are mutual finite-order representations. Most are infinite in one form or the other.
+When we wish to represent such an *AR(1)* or *MA(1)* using their opposite we will quickly find counterexamples that require infinite number of parameters to represent the same process. In fact I would venture to say that only trivial or specially constructed *AR* and *MA* processes (e.g., white noise) are mutual finite-order representations. Most are infinite in one form or the other.
 :::
 
 ::: {#exm-capstone-ma1-process}
@@ -971,31 +976,31 @@ defined in terms of the difference operator that we denoted as D, that produces 
 
 $$
 y_t = y_t − y_{t−1}
-$$
+$$ {#eq-capstone-differencing}
 
 Higher order differences are obtained by successively applying the operator D. For example
 
 $$
-D^2y_t = D(Dy_t) = D(y_t − y_{t−1}) = y_t − 2y_{t−1} + y_{t−2}
+\operatorname{D}^2y_t = \operatorname{D}(\operatorname{D}y_t) = \operatorname{D}(y_t − y_{t−1}) = y_t − 2y_{t−1} + y_{t−2}
 $$ {#eq-capstone-differencing}
 
 Differencing can also be written in terms of the so called backshift operator $B$, with 
 
 $$
-By_t = y_{t−1} 
-$$
+\operatorname{B}y_t = y_{t−1} 
+$$ {#eq-capstone-backshift-operator}
 
 so that 
 
 $$
-Dy_t = (1 − B)y_t
-$$
+\operatorname{D}y_t = (1 − \operatorname{B})y_t
+$$ {#eq-capstone-differencing-backshift}
 
 and 
 
 $$
-D^dy_t = (1 − B)^dy_t.
-$$
+\operatorname{D}^dy_t = (1 − \operatorname{B})^dy_t
+$$ {#eq-capstone-differencing-backshift-d}
 
 #### Moving Averages
 
