dic amd Module 2 notes are complete

--- a/C5-L01.qmd
+++ b/C5-L01.qmd
@@ -21,8 +21,8 @@ keywords:
 ## Introduction 🎥 {#sec-capstone-introduction} 
 
 This is a capstone project for the Bayesian Statistics course. 
-The instructor is a doctoral student Chi Joe Kao. I should point out that while he doesn't have the pedigree of the other instructors, he was on one of the best explainers of the complex material.  One downside is that is english is a little broken but I've had much worse. However you can see from the first slide that it covers the key concepts in a clear and concise manner leaving out very little.
-Also it seems to me that Chi Joe Kao still remembers how hard this material is at first glance which is a great asset for teaching it effectively. You may notice that we revisit some old material this is because this course makes a great effort to be self contained. 
+The instructor is a doctoral student Jizhou Kang. I should point out that while he doesn't have the pedigree of the other instructors, he was on one of the best explainers of the complex material.  One downside is that is english is a little broken but I've had much worse. However you can see from the first slide that it covers the key concepts in a clear and concise manner leaving out very little.
+Also it seems to me that Jizhou Kang still remembers how hard this material is at first glance which is a great asset for teaching it effectively. You may notice that we revisit some old material this is because this course makes a great effort to be self contained. 
 
 Many parts of this course are steps towards completing the capstone project.
 And perhaps just as exciting we will also cover a new type of model - a mixture version of the autoregressive model from the previous course.
