--- a/C6-L00.qmd
+++ b/C6-L00.qmd
@@ -11,8 +11,19 @@ keywords:
 
 # Bayesian Non-Parametric Models
 
-This is not available as a course on Coursera and isn't a part of the specialization which ended in the last course. So this notes are my own personal notes gathered from tutorials and courses I found on the web.
 
+Here is a question I raised in my Feynman Notebook:
+
+1. Will we learn about Gaussian Processes/Neural Networks in this course?
+   - This is a type of Bayesian Non-parametric and we don't cover these in the specialization. However Abel Rodriguez, the instructor of the third course on mixture model has a [short course](https://users.soe.ucsc.edu/~abel/website/Teaching.html)
+   - Herbert Lee wrote a [Bayesian Nonparametrics via Neural Networks](https://www.amazon.com/Bayesian-Nonparametrics-Networks-Statistics-Probability/dp/0898715636) on the subject.
+   - [Athanasios Kottas](https://users.soe.ucsc.edu/~thanos/) of UCSC has made the following notes available on his website:   
+    - Tutorial on [Nonparametric Bayesian density regression:
+modeling methods and applications](https://users.soe.ucsc.edu/~thanos/BNPnet_tutorial_notes.pdf)
+    - Short course on [Applied Bayesian Nonparametric Mixture Modeling](https://users.soe.ucsc.edu/~thanos/NPB_course_notes.pdf) with [references (16 pages)](https://users.soe.ucsc.edu/~thanos/NPB_course_references.pdf) with 52 of them being his own papers.
+
+
+This is not available as a course on Coursera and isn't a part of the specialization which ended in the last course. So this notes are my own personal notes gathered from tutorials and courses I found on the web.
 - Tamara Broderick's Gaussian Processes for Regression tutorials from 
   - 2025 [slides](https://tamarabroderick.com/tutorial_2025_asa_cirs_webinar.html) [video](https://www.youtube.com/watch?v=szuREe_brxw&ab_channel=AmstatVideos) and [code](https://github.com/tbroderick/gps_tutorial/tree/2025asa_cirs)
   - 2024 [slides](https://tamarabroderick.com/tutorial_2024_cps-fr.html) 
