non-parametric modeling

--- a/C3-L09-Ex4.qmd
+++ b/C3-L09-Ex4.qmd
@@ -54,7 +54,7 @@ where $w$ is the weight associated with the point mass at zero, $\lambda$ is the
 :::
 
 
-## Full conditional distributions {#sec-zip-mixture-fc}
+## Full conditional distributions {#sec-zip-mixture-fc-4}
 
 The full conditional distributions for the indicators of the ZIP model are given by:
 
